// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Txt Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-fKVsgm hjxFYR sc-bBHwJV ghoMNI"
    >
      Standard
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Txt In Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-fKVsgm hjxFYR sc-bBHwJV eUwKNa"
    >
      Colored text
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Txt Span Component 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <span
      class="sc-fKVsgm bcRRQZ sc-iwjezw cUnsQP"
    >
      Space   is   preserved
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/Txt Styled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-fKVsgm gTPEIj sc-bBHwJV ghoMNI"
    >
      Styled text
    </div>
  </div>
</div>
`;
